# advent_of_code

./: Cargo.toml
2017/day1/: python.py
2017/day12/: part1.py
2017/day2/: python.py
2017/day3/: python.py
2017/day4/: python.py
2017/day5/: python.py
2018/day1/: python.py  rust  rust.rs
2018/day10/: python.py
2018/day11/: python.py
2018/day12/: python.py
2018/day13/: python.py
2018/day14/: python.py  rust.rs
2018/day15/: examples.txt  python.py
2018/day2/: python.py  rust  rust.rs
2018/day3/: python.py  rust  rust.rs
2018/day4/: python.py  rust.rs
2018/day5/: python.py  rust  rust.rs
2018/day6/: python.py  rust  rust.rs
2018/day7/: python.py
2018/day8/: python.py  rust
2018/day9/: python.py  rust.rs
2019/day20/: python.py
2019/day22/: python.py  rust  rust.rs
2025/day10/: part2_ilp.py  rust_gcd  rust_gcd.rs
2025/day9/: python.py  rust  rust.rs
leetcode/: claude-practice.jsx  figma.py
sparrow_interview/: sparrow.py
